perf improvements (#2)
* Lint fixes

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

* Removed some synchronized

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

* Removed some synchronized

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

* Removed some synchronized

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

---------

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>